# opencv-tutorials

./: README.md
source-code/c++/: CMakeLists.txt  display-image.cpp  main.cpp
source-code/c++/core-module/: mat.cpp  scan-images.cpp
source-code/c++/img_hash/: averageHash.cpp
source-code/c++/introduction-to-opencv/: display-image.cpp  modify-image.cpp
source-code/c++/similarity/: surf.cpp
source-code/python/: midia.py
